--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <meta name="description" content="My first webpage, with JavaScript" />
     <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="Mr. Coxall" />
+    <meta name="author" content="Parsa Tahavori" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>GitHub page as PWA template</title>
+    <link rel="canonical" href="https://mr-coxall.github.io/ICS2O-PWA-Test/" />
+    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -14,7 +18,27 @@
     <link
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.orange-blue.min.css"
+      media="none"
+      onload="if(media!='all')media='all'"
     />
+    <noscript> 
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      />
+    </noscript>
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.orange-blue.min.css"
+      media="none"
+      onload="if(media!='all')media='all'"
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://code.getmdl.io/1.3.0/material.orange-blue.min.css"
+      />
+    </noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -23,6 +47,7 @@
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
     <img
       src="./images/helianthus-yellow-flower-pixabay_11863.webp"
       alt="style"
