--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <img
-      src="./images/helianthus-yellow-flower-pixabay_11863.webp"
+      src="./images/istockphoto-1299451751-612x612.jpg"
       alt="style"
     />
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
