--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
-    <img src="./images/notebook-animation.svg" />
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">Hello, World! with JS</span>
         </div>
       </header>
+      <img src="./images/notebook-animation.svg" alt="rectangle" width="75%" height="auto" />
       <main class="mdl-layout__content">
         <div class="page-content" style="padding-left: 100px">
           Click the button.
