--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://code.getmdl.io/1.3.0/material.orange-blue.min.css"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       media="none"
       onload="if(media!='all')media='all'"
     />
