--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         >
           Click
         </button>
+        <p></p>
+        <div id="hello-world"></div>
       </main>
     </div>
   </body>
