--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="canonical"
       href="https://parsa-tahavori.github.io/template-use/"
     />
-    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <link rel="manifest" href="/template-use/manifest.webmanifest" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
     <link
