--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<html>
+<!--- ICS2O-My first PWA --->
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="My first webpage, with JavaScript" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="My first PWA" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Parsa Tahavori" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>GitHub page as PWA template</title>
-    <link
-      rel="canonical"
-      href="https://parsa-tahavori.github.io/template-use/"
-    />
-    <link rel="manifest" href="/template-use/manifest.webmanifest" />
+    <link rel="canonical" href="https://mr-coxall.github.io/ICS2O-PWA-Test/" />
+    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -34,48 +28,47 @@
     </noscript>
     <link
       rel="stylesheet"
-      href="https://code.getmdl.io/1.3.0/material.orange-blue.min.css"
+      href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"
       media="none"
       onload="if(media!='all')media='all'"
     />
     <noscript>
       <link
         rel="stylesheet"
-        href="https://code.getmdl.io/1.3.0/material.orange-blue.min.css"
+        href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"
       />
     </noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-    <title>My first webpage, with JavaScript</title>
   </head>
+  <title>My first PWA</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Hello, World! with JS</span>
+          <span class="mdl-layout-title">My first PWA</span>
         </div>
       </header>
-      <img
-        src="./images/notebook-animation.svg"
-        alt="rectangle"
-        width="75%"
-        height="auto"
-      />
       <main class="mdl-layout__content">
-        <div class="page-content" style="padding-left: 100px">
-          Click the button.
-        </div>
-        <!-- Colored raised button -->
+        <p></p>
+        <img
+          src="./images/notebook-animation.svg"
+          alt="Computer"
+          width="25%"
+          height="25%"
+        />
+        <p></p>
+        <!-- Raised button with ripple -->
         <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="myButtonClicked()"
         >
-          Click
+          Say "Hello, World!"
         </button>
+        <!-- basic text -->
         <p></p>
         <div id="hello-world"></div>
       </main>
